open-policy-agent/resource-exhaustion/disallow-self-provisioner/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowselfprovisioner
  annotations:
    description: Disallows self provisioner role to all users.
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowSelfProvisioner
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowselfprovisioner
        violation[{"msg": msg}] {
          input.review.kind.kind == "ClusterRoleBinding"
          input.review.object.metadata.name == "self-provisioners"
          count(input.review.object.subjects) > 0
          msg := sprintf("Adding the self-provisioner ClusterRole to users / groups is forbidden. %v can not be added to the self-provisioner ClusterRole", [input.review.object.subjects[_].name])
        }
